// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apple Touch Icon generation options work correctly 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.55a3a855.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Apple Touch Icon generation options work correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Apple Touch Icon generation options work correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Apple Touch Icon generation options work correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.55a3a855.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Config overrides package.json properties 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Config overrides package.json properties 2`] = `
Object {
  "background_color": "white",
  "description": "Better test!",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "Tester",
  "scope": "./",
  "short_name": "Test",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Config overrides package.json properties 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Config overrides package.json properties 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Custom NODE_ENV options work 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Custom NODE_ENV options work 2`] = `
Object {
  "background_color": "white",
  "description": "Ooh! testing!",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "jest",
  "scope": "./",
  "short_name": "testing",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Custom NODE_ENV options work 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Custom NODE_ENV options work 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Default generation works correctly 1`] = `
Array [
  "icon-96x96.b1e09075.webp",
  "icon-96x96.c5330840.png",
  "icon-152x152.a1f4f47a.webp",
  "icon-152x152.6115bce1.png",
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-384x384.e4fe6960.webp",
  "icon-384x384.59b7a9f8.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Default generation works correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "96x96",
      "src": "./icon-96x96.b1e09075.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "96x96",
      "src": "./icon-96x96.c5330840.png",
      "type": "image/png",
    },
    Object {
      "sizes": "152x152",
      "src": "./icon-152x152.a1f4f47a.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "152x152",
      "src": "./icon-152x152.6115bce1.png",
      "type": "image/png",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "384x384",
      "src": "./icon-384x384.e4fe6960.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "384x384",
      "src": "./icon-384x384.59b7a9f8.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Default generation works correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Default generation works correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Favicon generation works correctly 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "favicon-32x32.743f0ca1.png",
  "favicon-16x16.d8c5885e.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Favicon generation works correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Favicon generation works correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Favicon generation works correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./favicon-32x32.743f0ca1.png",
      "rel": "icon",
      "sizes": "32x32",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./favicon-16x16.d8c5885e.png",
      "rel": "icon",
      "sizes": "16x16",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Formats work correctly 1`] = `
Array [
  "icon-192x192.c2e0ecd6.webp",
  "icon-192x192.1421700b.png",
  "icon-192x192.41e1ed48.jpeg",
  "icon-512x512.f44f37e8.webp",
  "icon-512x512.03718fd9.png",
  "icon-512x512.868f70e4.jpeg",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Formats work correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.c2e0ecd6.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.41e1ed48.jpeg",
      "type": "image/jpeg",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.f44f37e8.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.868f70e4.jpeg",
      "type": "image/jpeg",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Formats work correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Formats work correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Microsoft Tile generation options work correctly 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Microsoft Tile generation options work correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Microsoft Tile generation options work correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>red</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Microsoft Tile generation options work correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Purpose modification works 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Purpose modification works 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "purpose": "maskable any",
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "purpose": "maskable any",
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "purpose": "maskable any",
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "purpose": "maskable any",
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Purpose modification works 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Purpose modification works 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Resize method option works correctly 1`] = `
Array [
  "icon-192x192.dbb23144.webp",
  "icon-192x192.3434e21c.png",
  "icon-512x512.5ae4ed85.webp",
  "icon-512x512.f91dd2b8.png",
  "apple-touch-icon.03f60dde.png",
  "mstile-70x70.648a2539.png",
  "mstile-150x150.fbfce598.png",
  "mstile-310x310.e2ed9d0a.png",
  "mstile-310x150.5970012a.png",
]
`;

exports[`Resize method option works correctly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.dbb23144.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.3434e21c.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.5ae4ed85.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.f91dd2b8.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Resize method option works correctly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.648a2539.png\\"/><square150x150logo src=\\"./mstile-150x150.fbfce598.png\\"/><square310x310logo src=\\"./mstile-310x310.e2ed9d0a.png\\"/><wide310x150logo src=\\"./mstile-310x150.5970012a.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Resize method option works correctly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.03f60dde.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Screenshot injection works 1`] = `
Array [
  "screenshot.db3e932d.png",
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Screenshot injection works 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "screenshots": Array [
    Object {
      "src": "https://myfakesite.com/screenshot0.webp",
      "type": "image/webp",
    },
    Object {
      "src": "./screenshot.db3e932d.png",
      "type": "image/png",
    },
  ],
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Screenshot injection works 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Screenshot injection works 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Specifying sizes works properly 1`] = `
Array [
  "icon-57x57.df72b665.webp",
  "icon-57x57.6cab30d1.png",
  "icon-180x180.5bd7895c.webp",
  "icon-180x180.e3c77fb2.png",
  "icon-384x384.e4fe6960.webp",
  "icon-384x384.59b7a9f8.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "apple-touch-icon.67e6641c.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Specifying sizes works properly 2`] = `
Object {
  "background_color": "white",
  "description": "test",
  "display": "standalone",
  "icons": Array [
    Object {
      "sizes": "57x57",
      "src": "./icon-57x57.df72b665.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "57x57",
      "src": "./icon-57x57.6cab30d1.png",
      "type": "image/png",
    },
    Object {
      "sizes": "180x180",
      "src": "./icon-180x180.5bd7895c.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "180x180",
      "src": "./icon-180x180.e3c77fb2.png",
      "type": "image/png",
    },
    Object {
      "sizes": "384x384",
      "src": "./icon-384x384.e4fe6960.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "384x384",
      "src": "./icon-384x384.59b7a9f8.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
  ],
  "name": "tester",
  "scope": "./",
  "short_name": "tester",
  "start_url": "./",
  "theme_color": "white",
}
`;

exports[`Specifying sizes works properly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>white</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Specifying sizes works properly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "white",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.67e6641c.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;

exports[`Standard parameters work properly 1`] = `
Array [
  "icon-192x192.60385309.webp",
  "icon-192x192.1421700b.png",
  "icon-512x512.53c5ad04.webp",
  "icon-512x512.03718fd9.png",
  "apple-touch-icon.636f8a01.png",
  "mstile-70x70.d4870be2.png",
  "mstile-150x150.db75c4ea.png",
  "mstile-310x310.7d35cb45.png",
  "mstile-310x150.df0ada1c.png",
]
`;

exports[`Standard parameters work properly 2`] = `
Object {
  "background_color": "red",
  "categories": Array [
    "pwa",
    "amazing",
  ],
  "description": "test",
  "dir": "ltr",
  "display": "fullscreen",
  "iarc_rating_id": "someIarcRating",
  "icons": Array [
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.60385309.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "192x192",
      "src": "./icon-192x192.1421700b.png",
      "type": "image/png",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.53c5ad04.webp",
      "type": "image/webp",
    },
    Object {
      "sizes": "512x512",
      "src": "./icon-512x512.03718fd9.png",
      "type": "image/png",
    },
  ],
  "lang": "en",
  "name": "My Amazing PWA",
  "orientation": "portrait-primary",
  "prefer_related_applications": true,
  "related_applications": Array [
    Object {
      "platform": "chrome_web_store",
      "url": "https://chrome.google.com/webstore/detail/my-amazing-pwa/jlkzsdheuahoidu3idjfakj",
    },
    Object {
      "id": "com.myamazingpwa.myamazingpwa",
      "platform": "play",
    },
  ],
  "scope": "/",
  "short_name": "My PWA",
  "start_url": "./test",
  "theme_color": "skyblue",
}
`;

exports[`Standard parameters work properly 3`] = `"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?><browserconfig><msapplication><tile><TileColor>skyblue</TileColor><square70x70logo src=\\"./mstile-70x70.d4870be2.png\\"/><square150x150logo src=\\"./mstile-150x150.db75c4ea.png\\"/><square310x310logo src=\\"./mstile-310x310.7d35cb45.png\\"/><wide310x150logo src=\\"./mstile-310x150.df0ada1c.png\\"/></tile></msapplication></browserconfig>"`;

exports[`Standard parameters work properly 4`] = `
Array [
  Array [
    "meta",
    Object {
      "content": "./browserconfig.xml",
      "name": "msapplication-config",
    },
  ],
  Array [
    "meta",
    Object {
      "content": "skyblue",
      "name": "theme-color",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./apple-touch-icon.636f8a01.png",
      "rel": "apple-touch-icon",
      "sizes": "180x180",
    },
  ],
  Array [
    "link",
    Object {
      "href": "./manifest.webmanifest",
      "rel": "manifest",
    },
  ],
]
`;
